[package]
name = "TestMain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
ethers = { version = "2.0.14", features = ["rustls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "macros"] }
toml = "0.9.7"
